# shippinglabel-converter

./: .gitignore  LICENSE  README.md  cli.py  convert.py  main.py  pyproject.toml  shell.nix
static/: main.css
templates/: index.html
